Added repo link to toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "AT42QT2120"
 version = "0.1.0"
 authors = ["Rik te Winkel <rik@justanotherelectronicsblog.com>"]
+repository = "https://github.com/riktw/AT42QT2120-rs"
 license = "GNU Lesser General Public License v3.0"
 description = "Platform agnostic Rust driver for the AT42QT2120"
 readme = "README.md"
