--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "AT42QT2120"
 version = "0.1.0"
 authors = ["Rik te Winkel <rik@justanotherelectronicsblog.com>"]
 repository = "https://github.com/riktw/AT42QT2120-rs"
-license = "GNU Lesser General Public License v3.0"
+license = "LGPL-3.0"
 description = "Platform agnostic Rust driver for the AT42QT2120"
 readme = "README.md"
 keywords = ["AT42QT2120", "driver", "touch", "embedded-hal-driver"]
