--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "AT42QT2120"
 version = "0.1.0"
-authors = ["Rik te Winkel <rik@justanotherelectronicsblog.com>"]
+authors = ["Rik <rik@justanotherelectronicsblog.com>"]
 repository = "https://github.com/riktw/AT42QT2120-rs"
 license = "LGPL-3.0"
 description = "Platform agnostic Rust driver for the AT42QT2120"
